[package]
name = "gwd-backend-firefox"
version = "0.1.0"
authors = ["Utkarsh Bhardwaj (Passeriform) <passeriform.ub@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
custom_error = "1.7.1"
dirs = "2.0.2"
glob = "0.3.0"
godwit-daemon = "0.1.3"
lz4 = "1.23.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
